--- a/GFL/index.css
+++ b/GFL/index.css
@@ -22,6 +22,6 @@
     bottom: 0;
     width: 100%;
     white-space: nowrap;
-    font-size: min(8cqw, 2.5rem);
-    -webkit-text-stroke: min(1vw, 0.1rem) black;
+    font-size: min(8cqw, 50px);
+    -webkit-text-stroke: 1px black;
 }
