--- a/univasset/scripts/tooltip.css
+++ b/univasset/scripts/tooltip.css
@@ -4,10 +4,12 @@
 
 .tooltiptext {
     position: absolute;
-    width: 300px;
+    min-width: fit-content;
+    width: 30vw;
+    max-width: 300px;
     padding: 3px;
-    transform: translateX(-50%);
     left: 50%;
+    transform: translateX(-50%);
     background-color: #555;
     color: #fff;
     text-align: center;
@@ -16,12 +18,6 @@
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.3s;
-}
-
-@media screen and (max-width: 720px) {
-    .tooltiptext {
-        width: 150px;
-    }
 }
 
 .tooltip + .tooltiptext {
