--- a/PNC/units.css
+++ b/PNC/units.css
@@ -10,10 +10,6 @@ input[type="checkbox"], input[type="radio"] {
     margin: 0;
 }
 
-#stats, #data {
-    display: none;
-}
-
 /* #region Freeze */
 .func_table tr:nth-child(even) > :first-child {
     background: #282e1f !important;
@@ -49,23 +45,9 @@ input[type="checkbox"], input[type="radio"] {
     flex-wrap: wrap;
     text-align: center;
     border-style: initial;
-
-    & > label {
-        background-color: transparent;
-        line-height: 10px;
-        flex: calc(100% / 2);
-    }
-    
-    & > label:has(input:checked) {
-        background-color: darkgreen;
-    }
-    
-    & h2 {
-        margin: 0px 0px 10px;
-    }    
 }
 
-/* #button > label {
+#button > label {
     background-color: transparent;
     line-height: 10px;
     flex: calc(100% / 2);
@@ -77,7 +59,16 @@ input[type="checkbox"], input[type="radio"] {
 
 #button h2 {
     margin: 0px 0px 10px;
-} */
+}
+
+#stats, #data {
+    display: none;
+}
+
+#button:has([value="stat"]:checked) ~ #stats,
+#button:has([value="data"]:checked) ~ #data {
+    display: revert;
+}
 /* #endregion */
 
 /* #region Arma */
@@ -123,12 +114,13 @@ input[type="checkbox"], input[type="radio"] {
 /* If small space display: revert */
 
 #bonus label {
-    --color: limegreen
+    --color: limegreen;
     outline: 2px solid var(--color);
     border-radius: 10rem;
     padding: 0px 3px;
     background: transparent;
     color: var(--color);
+    white-space: nowrap;
 }
 
 #bonus label:has(input:checked) {
