--- a/GFL/index.css
+++ b/GFL/index.css
@@ -23,5 +23,6 @@
     width: 100%;
     white-space: nowrap;
     font-size: min(8cqw, 50px);
-    -webkit-text-stroke: 1px black;
+    -webkit-text-stroke: 1px white;
+    color: black;
 }
