--- a/PNC/units.css
+++ b/PNC/units.css
@@ -94,11 +94,46 @@ input[type="checkbox"], input[type="radio"] {
     text-align: center;
 }
 
+#classes > label {
+    height: 30px;
+    background-size: auto 100%;
+    background-position: left;
+}
+
+#classes > label:has(> :checked) {
+    background-position: right;
+}
+
+#classes > label:has([value="Guard"]) {
+    background-image: url("./assets/images/classes/Guard.png");
+    aspect-ratio: 48/64;
+}
+
+#classes > label:has([value="Sniper"]) {
+    background-image: url("./assets/images/classes/Sniper.png");
+    aspect-ratio: 61/64;
+}
+
+#classes > label:has([value="Warrior"]) {
+    background-image: url("./assets/images/classes/Warrior.png");
+    aspect-ratio: 64/64;
+}
+
+#classes > label:has([value="Specialist"]) {
+    background-image: url("./assets/images/classes/Specialist.png");
+    aspect-ratio: 54/64;
+}
+
+#classes > label:has([value="Medic"]) {
+    background-image: url("./assets/images/classes/Medic.png");
+    aspect-ratio: 64/64;
+}
+
 /* If small space display: revert */
 
-#classes img {
+/* #classes img {
     height: 30px;
-}
+} */
 /* #endregion */
 
 /* #region Bonus */
