--- a/PNC/units.css
+++ b/PNC/units.css
@@ -12,10 +12,10 @@ input[type="checkbox"], input[type="radio"] {
 
 /* #region Freeze */
 .freeze-row th {
-    background: #1b1b1b;
+    background: #1b1b1b !important;
 }
 
-:where(.freeze-col) :where(tr) > :where(:first-child) {
+.freeze-col tr:nth-child(odd) > :first-child {
     border-right: 1px dashed #b5e853;
     background: #1b1b1b;
 }
