--- a/PNC/units.css
+++ b/PNC/units.css
@@ -22,6 +22,11 @@ input[type="checkbox"], input[type="radio"] {
 .freeze-col tr:nth-child(odd) > :first-child {
     background: #1b1b1b;
 }
+
+.freeze-col tr:nth-child(even) > :first-child {
+    background: inherit;
+}
+
 /* #endregion */
 
 /* #region Sort */
