--- a/PNC/units.css
+++ b/PNC/units.css
@@ -86,7 +86,12 @@ dialog {
     border-radius: 10px;
 }
 
-#algo-modal > .tab-button {
+#algo-modal > div {
+    width: 100%;
+    height: 100%;
+}
+
+#algo-modal .tab-button {
     display: none;
 }
 
