--- a/univasset/scripts/externalcss.css
+++ b/univasset/scripts/externalcss.css
@@ -2,6 +2,7 @@
 @import "./htmlgenerator/htmlgenerator.css";
 @import "./pageheader/header.css";
 @import "./tooltip.css";
+@import "./tabs.css";
 
 code {
 	background: rgba(0, 0, 0, 0.9);
