--- a/PNC/algorithms.css
+++ b/PNC/algorithms.css
@@ -37,15 +37,17 @@
 
 .double-block {
     grid-column-end: span 2;
+    display: flex;
+    justify-content: space-between;
 }
 
-.double-block > div:nth-child(1) {
+.double-block > div:first-of-type {
     background-color: var(--gray-algo);
 }
 
-.double-block > div:nth-child(2) {
+.double-block > div:last-of-type {
     height: 100%;
-    aspect-ratio: 1/1;
+    aspect-ratio: 1;
 }
 
 .mainstat {
