--- a/PNC/algorithms.css
+++ b/PNC/algorithms.css
@@ -17,9 +17,8 @@ dialog {
 }
 
 /* #region Algorithm Grid */
-#algo-modal .tab-body > div {
+#algo-modal .tab-body {
     --gridsize: 100px;
-    display: grid;
     grid-template-columns: repeat(2, var(--gridsize));
     grid-auto-rows: var(--gridsize);
     gap: 5px;
@@ -104,7 +103,7 @@ dialog {
 }
 
 #algo-modal .tab-body {
-    display: inline-block;
+    display: inline-grid;
 }
 
 @container (width < 650px) {
@@ -120,7 +119,7 @@ dialog {
     #algo-modal .tab-button:has([value="Offense"]:checked) ~ #Offense,
     #algo-modal .tab-button:has([value="Stability"]:checked) ~ #Stability,
     #algo-modal .tab-button:has([value="Special"]:checked) ~ #Special {
-        display: inline-block;
+        display: inline-grid;
     }
 }
 /* #endregion */
