--- a/PNC/algorithms.css
+++ b/PNC/algorithms.css
@@ -54,9 +54,8 @@ dialog {
     aspect-ratio: 1;
 }
 
-.double-block > div:first-of-type {
-    background-repeat: no-repeat;
-    background-size: cover;
+.double-block > img {
+    height: 100%;
 }
 
 .mainstat {
@@ -140,10 +139,8 @@ dialog {
     padding: 0;
 }
 
-#algo-select button > div:first-child {
+#algo-select button > img {
     width: 100px;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 
