--- a/PNC/algorithms.css
+++ b/PNC/algorithms.css
@@ -89,7 +89,7 @@ dialog {
 }
 
 #algo-modal .tab-button > label{
-    /* background-color: transparent; */
+    background-color: transparent;
     line-height: 10px;
     flex: calc(100% / 3);
 }
@@ -104,23 +104,22 @@ dialog {
 
 @container (width < 650px) {
     #algo-modal .tab-button > label:has(input:checked) {
-        /* background-color: var(--gold-algo); */
         background-repeat: no-repeat;
-        background-size: auto 100%;
+        background-size: 100%;
     }
 
     #algo-modal .tab-button > label:has([value="Offense"]:checked) {
-        background-image: url("./assets/images/algorithms/Offense.png");
+        background-image: url("./assets/images/algorithms/tabs/Offense.png");
         background-position: left;
     }
 
     #algo-modal .tab-button > label:has([value="Stability"]:checked) {
-        background-image: url("./assets/images/algorithms/Stability.png");
+        background-image: url("./assets/images/algorithms/tabs/Stability.png");
         background-position: center;
     }
 
     #algo-modal .tab-button > label:has([value="Special"]:checked) {
-        background-image: url("./assets/images/algorithms/Special.png");
+        background-image: url("./assets/images/algorithms/tabs/Special.png");
         background-position: right;
     }
 
