--- a/PNC/unitstats/index.css
+++ b/PNC/unitstats/index.css
@@ -1,4 +1,4 @@
-@import "../../univasset/scripts/externalcss.css";
+@import "/univasset/scripts/externalcss.css";
 
 .func_table {
     height: 95vh;
