--- a/PNC/faqs/index.css
+++ b/PNC/faqs/index.css
@@ -1,4 +1,34 @@
-@import "../univasset/scripts/externalcss.css";
+@import "../../univasset/scripts/externalcss.css";
+
+/* #region Tabs */
+.tab-button > label {
+    background-color: transparent;
+    line-height: 10px;
+    flex: calc(100% / 3);
+}
+
+.tab-button > label:has(input:checked) {
+    background-color: darkgreen;
+}
+
+.tab-button h2 {
+    margin: 0px 0px 10px;
+}
+
+.tab-button:has([value="Keywords"]:checked) ~ #Keywords,
+.tab-button:has([value="Tags"]:checked) ~ #Tags,
+.tab-button:has([value="Browse"]:checked) ~ #Browse {
+    display: block;
+}
+
+input[name="search"] {
+    width: calc(100% - 76px);
+}
+
+#Tags div, #Browse {
+    text-align: center;
+}
+/* #endregion */
 
 /* #region General */
 input[type="checkbox"]{
@@ -47,37 +77,6 @@ label.tags:has(input:checked) {
 
 .card-tags {
     line-height: 20px;
-}
-/* #endregion */
-
-/* #region Input Type Selector */
-#input-type-container {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-    border-style: initial;
-}
-
-#input-type-container > label {
-    background-color: transparent;
-    line-height: 10px;
-    flex: calc(100% / 3);
-}
-
-#input-type-container > label:has(input:checked) {
-    background-color: darkgreen;
-}
-
-#input-type-container h2 {
-    margin: 0px 0px 10px;
-}
-
-#search-text {
-    width: calc(100% - 76px);
-}
-
-#tags-list, #browse-page {
-    text-align: center;
 }
 /* #endregion */
 
@@ -149,3 +148,4 @@ img.inline-img {
     height: 1rem;
 }
 /* #endregion */
+
