--- a/univasset/scripts/pageheader/header.css
+++ b/univasset/scripts/pageheader/header.css
@@ -27,7 +27,7 @@
 }
 
 .btn-pnc .icon {
-    background-image: url("exiles.png");
+    background-image: url("./exiles.png");
 }
 /* #endregion */
 
